syntax = "proto3";

option go_package = "/proto_gen";

package chat;

import "google/protobuf/timestamp.proto";

service ChatService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (ChatEmpty);
  rpc SendMessage(SendMessageRequest) returns (ChatEmpty);
  rpc Connect(ConnectRequest) returns (stream Message);
}

message ChatEmpty {}

message CreateRequest {
  repeated string usernames = 1;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message SendMessageRequest {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message ConnectRequest {
  int64 id = 1;
}

message Message {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}